After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 770924 - Fail to build without wayland support
Fail to build without wayland support
Status: RESOLVED FIXED
Product: evince
Classification: Core
Component: Browser plugin
git master
Other FreeBSD
: Normal normal
: ---
Assigned To: Evince Maintainers
Evince Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-09-06 05:37 UTC by Ting-Wei Lan
Modified: 2016-09-07 15:37 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
browser-plugin: Replace gdkwayland.h include with gdk.h (985 bytes, patch)
2016-09-06 05:39 UTC, Ting-Wei Lan
committed Details | Review

Description Ting-Wei Lan 2016-09-06 05:37:50 UTC
Recent commit 3068fc1 breaks the build on systems without wayland support by including gdkwayland.h unconditionally. Fortunately, it is not required and we can simply use gdk.h instead.

browser-plugin/EvBrowserPluginMain.cpp:25:10: fatal error: 'gdk/gdkwayland.h' file not found
Comment 1 Ting-Wei Lan 2016-09-06 05:39:19 UTC
Created attachment 334870 [details] [review]
browser-plugin: Replace gdkwayland.h include with gdk.h

GDK_WINDOWING_WAYLAND macro is defined in gdkconfig.h, not gdkwayland.h,
so including gdk.h is sufficient. This also fixes build on systems not
supporting Wayland.
Comment 2 Carlos Garcia Campos 2016-09-07 13:30:04 UTC
Comment on attachment 334870 [details] [review]
browser-plugin: Replace gdkwayland.h include with gdk.h

Ah, sorry about this. Thanks for the patch, I've just pushed it.
Comment 3 Carlos Garcia Campos 2016-09-07 13:50:19 UTC
The patch broke gnome continuous build, so I guess we really need to include gdkwayland.h. Maybe something changed in GTK+ because it also built fine for me here.
Comment 4 Carlos Garcia Campos 2016-09-07 13:50:43 UTC
I've reverted the patch for now.
Comment 5 Germán Poo-Caamaño 2016-09-07 15:11:41 UTC
It fails to build in my machine, too.  I am rebuilding GTK+ to check if related to that (it behind 138 commits from origin/master).

Anyhow, if that were the issue, we would need to bump the GTK requirement.
Comment 6 Germán Poo-Caamaño 2016-09-07 15:16:35 UTC
I think gtk+ needs to be build with --enable-wayland-backend, which kind of defeat the purpose of the include.
Comment 7 Carlos Garcia Campos 2016-09-07 15:20:06 UTC
ebassi suggested we just need to include first gdk.h and then include gdkwayland inside a #if GDK_WINDOWING_WAYLAND block. I'll fix it.
Comment 8 Carlos Garcia Campos 2016-09-07 15:22:05 UTC
Pushed a new patch.
Comment 9 Germán Poo-Caamaño 2016-09-07 15:37:00 UTC
That makes sense. Thanks for fixing the issue.