browser-plugin: Replace gdkwayland.h include with gdk.h

GDK_WINDOWING_WAYLAND macro is defined in gdkconfig.h, not gdkwayland.h,
so including gdk.h is sufficient. This also fixes build on systems not
supporting Wayland.

https://bugzilla.gnome.org/show_bug.cgi?id=770924